# varsubst

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: substitution.rs
examples/: basic.rs  template.txt
src/: lib.rs  main.rs
